--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,6 +17,5 @@
         <activity android:name="RacerMenu" />
 
     </application>
-    <supports-screens android:resizeable="true"/>
-    <uses-sdk android:minSdkVersion="3" />
+    <uses-sdk android:minSdkVersion="4" android:targetSdkVersion="7"/>
 </manifest> 
